# copier-aws-central-infrastructure

./: .copier-answers.yml  .pre-commit-config.yaml  AGENTS.md  README.md  copier.yml  mutex_queue  pyproject.toml  ruff.toml  ty.toml
.config/: .copier-answers.yml  .copier-managed-files.json  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh
.github/actions/install_deps_uv/: install-ci-tooling.ps1
.github/workflows/: ci.yaml
extensions/: context.py
template/: CODEOWNERS.jinja  README.md.jinja  pyproject.toml.jinja  pyrightconfig.json
template/.config/: .coveragerc  pyrefly.mutmut.toml  ruff.toml
template/.devcontainer/: create-aws-profile.sh.jinja  devcontainer.json.jinja  install-pulumi-cli.sh
template/.github/: dependabot.yml.jinja
template/.github/actions/check-skip-duplicates/: action.yml
template/.github/actions/install_deps_uv/: install-ci-tooling.ps1
template/.github/actions/pulumi_ephemeral_deploy/: action.yml
template/.github/workflows/: ci.yaml.jinja  pulumi-aws.yml
template/src/aws_central_infrastructure/: constants.py.jinja  deploy_artifact_stores.py.jinja  deploy_central_networking.py.jinja  deploy_iac_management.py.jinja  {% if initial_iac_management_deploy_occurred %}deploy_identity_center.py{% endif %}.jinja  {% if manage_github_repos %}deploy_github_repos.py{% endif %}.jinja
template/src/aws_central_infrastructure/artifact_stores/: ami_sharing.py  external_creds.py
template/src/aws_central_infrastructure/central_networking/: subnets.py
tests/copier_data/: data1.yaml  data2.yaml  data3.yaml
(+61 files in other folders)
