[project]
name = "copier-aws-central-infrastructure"
version = "0.1.0"
description = "Managing Central Infrastructure of an AWS Organization"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    # Managed by upstream template
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pyright[nodejs]>=1.1.404",
    "copier>=9.9.1",
    "copier-template-extensions>=0.3.2"

    # Specific to this template


]
