# ============== WARNING ==============================================================================
# File is managed by copier template: gh:LabAutomationAndScreening/copier-base-template.git
# See .config/.copier-managed-files.json for details.
#
# You are welcome to make changes to this file in your repo if they are custom to your project,
# but if the change should be shared with other projects, please backport it to the template repo.
# =====================================================================================================
[project]
name = "copier-aws-central-infrastructure"
version = "0.1.0"
description = "Managing Central Infrastructure of an AWS Organization"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "faker>=40.28.1",
    "pyright[nodejs]>=1.1.411",
    "pyrefly>=1.1.1",
    "copier==9.17.0",
    "copier-template-extensions==0.3.3"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
exclude-newer = "1 day"
